@@ -23,6 +23,17 @@ buildscript {
             }
         }
 
+        if (ExtraRepositories.mozillaStaging) {
+            maven {
+                name "Mozilla Staging"
+                url "https://maven-default.stage.mozaws.net/maven2"
+                content {
+                    // Improve performance: only check moz maven for mozilla deps.
+                    includeGroupByRegex RepoMatching.mozilla
+                }
+            }
+        }
+
         if (project.hasProperty("googleRepo")) {
             maven {
                 name "Google"
@@ -59,21 +70,29 @@ buildscript {
     }
 
     dependencies {
-        classpath FenixDependencies.tools_androidgradle
-        classpath FenixDependencies.tools_kotlingradle
+        classpath ComponentsDependencies.tools_androidgradle
+        classpath ComponentsDependencies.tools_kotlingradle
         classpath FenixDependencies.tools_benchmarkgradle
         classpath FenixDependencies.androidx_safeargs
         classpath FenixDependencies.osslicenses_plugin
         classpath "org.mozilla.telemetry:glean-gradle-plugin:${Versions.mozilla_glean}"
-        classpath "org.mozilla.appservices:tooling-nimbus-gradle:${Versions.mozilla_appservices}"
+        classpath "${ApplicationServicesConfig.groupId}:tooling-nimbus-gradle:${ApplicationServicesConfig.version}"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
+    // Variables in plugins {} aren't directly supported. Hack around it by setting an
+    // intermediate variable which can pull from FenixDependenciesPlugin.kt and be used later.
+    ext {
+        detekt_plugin = Versions.detekt
+        protobuf_plugin = FenixVersions.protobuf_plugin
+        python_envs_plugin = Versions.python_envs_plugin
+    }
 }
 
 plugins {
-    id("io.gitlab.arturbosch.detekt").version("1.19.0")
+    id("io.gitlab.arturbosch.detekt").version("$detekt_plugin")
 }
 
 allprojects {
@@ -94,6 +113,17 @@ allprojects {
             content {
                 // Improve performance: only check moz maven for mozilla deps.
                 includeGroupByRegex RepoMatching.mozilla
+            }
+        }
+
+        if (ExtraRepositories.mozillaStaging) {
+            maven {
+                name "Mozilla Staging"
+                url "https://maven-default.stage.mozaws.net/maven2"
+                content {
+                    // Improve performance: only check moz maven for mozilla deps.
+                    includeGroupByRegex RepoMatching.mozilla
+                }
             }
         }
 
@@ -133,30 +163,11 @@ allprojects {
     }
 
     tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
-        kotlinOptions.jvmTarget = "11"
+        kotlinOptions.jvmTarget = "17"
         kotlinOptions.allWarningsAsErrors = true
         kotlinOptions.freeCompilerArgs += [
             "-opt-in=kotlin.RequiresOptIn", "-Xjvm-default=all"
         ]
-    }
-}
-
-subprojects {
-    // Define a reusable task for updating the version in manifest.json for modules that package
-    // a web extension. We automate this to make sure we never forget to update the version, either
-    // in local development or for releases. In both cases, we want to make sure the latest version
-    // of all extensions (including their latest changes) are installed on first start-up.
-    ext.updateExtensionVersion = { task, extDir ->
-        configure(task) {
-            from extDir
-            include 'manifest.template.json'
-            rename { 'manifest.json' }
-            into extDir
-
-            def values = ['version': rootProject.ext.config.componentsVersion.split("a|b")[0] + "." + new Date().format('MMddHHmmss')]
-            inputs.properties(values)
-            expand(values)
-        }
     }
 }
 
@@ -206,14 +217,14 @@ configurations {
 }
 
 dependencies {
-    ktlint("com.pinterest:ktlint:0.48.2") {
+    ktlint("com.pinterest:ktlint:${Versions.ktlint}") {
         attributes {
             attribute(Bundling.BUNDLING_ATTRIBUTE, getObjects().named(Bundling, Bundling.EXTERNAL))
         }
     }
 
     detekt project(":mozilla-detekt-rules")
-    detekt "io.gitlab.arturbosch.detekt:detekt-cli:${FenixVersions.detekt}"
+    detekt "io.gitlab.arturbosch.detekt:detekt-cli:${Versions.detekt}"
 }
 
 tasks.register('ktlint', JavaExec) {
@@ -229,6 +240,7 @@ task ktlintFormat(type: JavaExec, group: "formatting") {
     classpath = configurations.ktlint
     mainClass.set("com.pinterest.ktlint.Main")
     args "-F", "app/src/**/*.kt", "!**/build/**/*.kt", "--baseline=ktlint-baseline.xml"
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
 
 tasks.withType(io.gitlab.arturbosch.detekt.Detekt.class).configureEach {
